# foam-agent-mcp-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/foam_agent_mcp_core/: __init__.py  config.py  runtime.py
tests/: test_runtime.py
