[project]
name = "foam-agent-mcp-core"
version = "0.1.1"
description = "Neutral helper utilities for building Foam-Agent powered MCP services"
authors = [{ name = "Foam Agent MCP Maintainers" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/Three-Little-Birds/foam-agent-mcp-core"
Repository = "https://github.com/Three-Little-Birds/foam-agent-mcp-core"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
